<resources>
    <string name="app_name">quicklearns</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_plan">Choose your learning plans</string>
    <string name="menu_package">Package and Purchase History</string>
    <string name="menu_call_history">Call History</string>
    <string name="menu_free_learning_benefits">Free Learning Benefits</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_rate_quicklearns">Rate Quicklearns</string>
    <string name="menu_give_us_feedback">Give Us Feedback</string>
    <string name="menu_student_support">Student Support</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>